# caraconnect

./: .editorconfig  Dockerfile  Makefile  README.md  docker-compose.yml  newrelic.ini  pyproject.toml
.github/workflows/: CI.yaml
app/: main.py  sentry.py  settings.py
app/exceptions/: rand_gen.py
app/models/: rand_gen.py
app/repositories/: base.py  rand_gen.py
app/routers/: health.py  rand_gen.py  v1.py
app/services/: rand_gen.py
my_proj/: helpers.py  main.py
tests/: conftest.py  ruff.toml  test_random_gen.py
tests/e2e/: conftest.py  test_health.py  test_rand_gen.py
tests/unit/: test_rand_gen.py
