[tool.ruff]
target-version = 'py311'
line-length = 100
exclude = [
    '.git',
    'venv',
    '.mypy_cache',
    '.pytest_cache',
    '.github',
]
select = ['ALL']
ignore = [
    'ANN101',  # missing-type-self
    'EM',  # flake8-errmsg
    'D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D106', 'D107', 'D203', 'D212',  # pydocstyle
    'TRY003',  # Avoid specifying long messages outside the exception class
    'PD011',  # False positive, see https://github.com/astral-sh/ruff/issues/2480
]

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ['app']


[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
  | \.git
  | venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.github
)/
'''
skip-string-normalization = true


[tool.mypy]
python_version = '3.11'
show_error_context = true
check_untyped_defs = true
exclude = ['^.git/', '^venv/', '^.mypy_cache/', '^.pytest_cache/', '^.ruff_cache/', '^.github/',]
plugins = ['pydantic.mypy']


[tool.bandit]
exclude_dirs = ['tests',]


[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-s -n auto'
testpaths = [
    'tests',
]


[tool.poetry]
name = 'CaraConnect'
version = '0.1.0'
description = 'My cool project'
authors = ['Sanchoyzer']
readme = 'README.md'
repository = 'https://github.com/Sanchoyzer/caraconnect'

[tool.poetry.dependencies]
python = '^3.11'
fastapi = {extras = ['all'], version = '^0.100.0'}
uvicorn = {extras = ['standard'], version = '^0.22.0'}
gunicorn = '^20.1.0'
sentry-sdk = {extras = ['fastapi'], version = '^1.27.0'}
httpx = '^0.24.1'
newrelic = "^8.8.1"

[tool.poetry.group.dev.dependencies]
mypy = '^1.0.1'
ruff = '~0.0.272'
black = '^23.1.0'
bandit = '^1.7.5'

[tool.poetry.group.test.dependencies]
faker = '^18.0.0'
pytest = '^7.2.1'
pytest-sugar = '^0.9.6'
pytest-xdist = '^3.3.1'
pytest-cov = '^4.1.0'
pytest-asyncio = '^0.21.0'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
