[tool.ruff]
target-version = 'py311'
line-length = 100
exclude = [
    '.git',
    'venv',
    '.mypy_cache',
    '.pytest_cache',
    '.github',
]
lint.select = ['ALL']
lint.ignore = [
    'ANN101',  # missing-type-self
    'EM',  # flake8-errmsg
    'D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D106', 'D107', 'D203', 'D212',  # pydocstyle
    'TRY003',  # Avoid specifying long messages outside the exception class
    'PD011',  # False positive, see https://github.com/astral-sh/ruff/issues/2480
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ['app']

[tool.ruff.lint.per-file-ignores]
'tests/*' = [
    'ANN',  # flake8-annotations
    'PT001',  # Use @pytest.fixture{expected} over @pytest.fixture{actual}
    'S101',  # Use of assert detected
    'PT018',  # Assertion should be broken down into multiple parts
    'RUF018',  # Avoid assignment expressions in `assert` statements
]


[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
  | \.git
  | venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.github
)/
'''
skip-string-normalization = true


[tool.mypy]
python_version = '3.11'
show_error_context = true
check_untyped_defs = true
exclude = ['^.git/', '^venv/', '^.mypy_cache/', '^.pytest_cache/', '^.ruff_cache/', '^.github/',]
plugins = ['pydantic.mypy']


[tool.bandit]
exclude_dirs = ['tests',]


[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-s -n auto --dup-fixtures'
testpaths = [
    'tests',
]


[tool.poetry]
name = 'CaraConnect'
version = '0.1.0'
description = 'My cool project'
authors = ['Sanchoyzer']
readme = 'README.md'
repository = 'https://github.com/Sanchoyzer/caraconnect'

[tool.poetry.dependencies]
python = '^3.11'
fastapi = {extras = ['all'], version = '^0'}
uvicorn = {extras = ['standard'], version = '^0.30.0'}
gunicorn = '^22.0.0'
sentry-sdk = '^2.10.0'
httpx = '^0.27.0'

[tool.poetry.group.dev.dependencies]
mypy = '^1.8.0'
ruff = '^0.6.5'
black = '^24.4.2'
bandit = '^1.7.5'

[tool.poetry.group.test.dependencies]
faker = '^26.0.0'
pytest = '^8.3.1'
pytest-sugar = '^1.0.0'
pytest-xdist = '^3.3.1'
pytest-cov = '^5.0.0'
pytest-asyncio = '^0.23.8'
pytest-randomly = '^3.15.0'
pytest-deadfixtures = '^2.2.1'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
